--- a/01-SECTION/03EJ/index.css
+++ b/01-SECTION/03EJ/index.css
@@ -2,13 +2,22 @@
     box-sizing: border-box;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 .box{
-    width: 25%;
+    width: 22%;
     height: 20rem;
     background-color: salmon;
     color: white;
-    border: 1px solid blue;
     float: left;
     padding: 2rem;
-    border: 1px solid black;
+    border: 10px solid blue;
+    
+}
+
+.box:not(:last-child){
+    margin-right: 4%;
 }
