--- a/03-SECTION/0309-EJ/scss/style.scss
+++ b/03-SECTION/0309-EJ/scss/style.scss
@@ -5,7 +5,7 @@ section{
     article{
         background-color: #FFF;
         color: lightblue;
-        padding: 1rem;
+        padding: 1em;
 
     }
 }
