--- a/03-SECTION/0309-EJ/scss/style.scss
+++ b/03-SECTION/0309-EJ/scss/style.scss
@@ -4,15 +4,22 @@ section{
     margin: 2rem;
     article{
         background-color: #FFF;
-        color: lightblue;
+        color: black;
         padding: 1em;
 
     }
 }
 
 #colums-inline-block{
+    font-size: 0;
     article{
         display: inline-block;
         width: 22%;
+        vertical-align: top;
+        height: 30rem;
+        font-size: 1rem;
+        &:not(:last-child){
+            margin-right: 4%;
+        }
     }
 }
